<?xml version="1.0"?>
<package>
  <name>adaptive_rangemat_clustering</name>
  <version>1.0.0</version>
  <description>An adaptive euclidean clustering method based on rangemat.</description>

  <maintainer email="jimazeyu@163.com">Mazeyu Ji</maintainer>

  <license>BSD</license>

  <author >Mazeyu Ji</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>

</package>
